Filter accounts at take offer and offerbook for currency